--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,35 @@
-node_modules
 test*
 *.pem
 *.sig
+
+# OS
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+.DS_Store
+._*
+
+# Editors
+*~
+*.swp
+*.tmproj
+*.tmproject
+*.sublime-*
+.idea/
+.project/
+.settings/
+.vscode/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Dependency directories
+bower_components/
+node_modules/
+
+# Build-related directories
+docs/api/
+.eslintcache
+.yo-rc.json
